slightly formatted webpage

--- a/easyScrape.ipynb
+++ b/easyScrape.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d67ef6ea-378a-4b79-9ccc-ac0b6311e203",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "63bcdf09-5e64-4517-a91e-1e56d47cd9b8",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "66475bdc-3794-4e3e-96da-e9672affb167",
    "metadata": {},
    "outputs": [],
@@ -68,17 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "49c575f7-1585-4ff3-8400-52ba7bec64b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<p class=\"f1--title\">6 Winners and 5 Losers from the Australian Grand Prix – Who got the crowd on their feet in Melbourne?</p>]"
+       "[<p class=\"f1--title\">TREMAYNE: Ferrari are the team to beat right now – but F1’s 2022 storyline is still far from written</p>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,17 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1923204f-39e0-4854-b769-889eb539c67f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'6 Winners and 5 Losers from the Australian Grand Prix – Who got the crowd on their feet in Melbourne?'"
+       "'TREMAYNE: Ferrari are the team to beat right now – but F1’s 2022 storyline is still far from written'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,6 +116,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "19291477-c97e-4fa1-b7f0-b7b024cf2b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/en/latest/article.treymayne-ferrari-are-the-team-to-beat-right-now-but-f1s-2022-storyline-is.5TvOJfMODCDTs6MIUpOM6V.html'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news_link = soup.find_all('a', class_='f1-cc')[0][\"href\"]\n",
+    "news_link"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "56902a6a-aeae-4e84-8e15-20b0a5382f8d",
    "metadata": {},
@@ -123,14 +145,6 @@
    "source": [
     "browser.quit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19291477-c97e-4fa1-b7f0-b7b024cf2b9c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
