--- a/easyScrape.ipynb
+++ b/easyScrape.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "d67ef6ea-378a-4b79-9ccc-ac0b6311e203",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "63bcdf09-5e64-4517-a91e-1e56d47cd9b8",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "66475bdc-3794-4e3e-96da-e9672affb167",
    "metadata": {},
    "outputs": [],
@@ -68,17 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "49c575f7-1585-4ff3-8400-52ba7bec64b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<p class=\"f1--title\">TREMAYNE: Ferrari are the team to beat right now – but F1’s 2022 storyline is still far from written</p>]"
+       "[<p class=\"f1--title\">6 clever race strategies from F1 history that paid big </p>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,17 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "1923204f-39e0-4854-b769-889eb539c67f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'TREMAYNE: Ferrari are the team to beat right now – but F1’s 2022 storyline is still far from written'"
+       "'6 clever race strategies from F1 history that paid big '"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,17 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "19291477-c97e-4fa1-b7f0-b7b024cf2b9c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/en/latest/article.treymayne-ferrari-are-the-team-to-beat-right-now-but-f1s-2022-storyline-is.5TvOJfMODCDTs6MIUpOM6V.html'"
+       "'/en/latest/article.6-clever-race-strategies-from-f1-history-that-paid-big.2BxUgWMjbqFrsjGSrGxm8a.html'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "f693c26e-df5c-4fd0-8417-7557046e118f",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "97c92581-b665-477e-b6b5-e6f53746e515",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "\"Haas rejects Uralkali's $13m refund demand\""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "cb6a34f6-1ceb-4556-a7be-b56c1a893adf",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "'/f1/story/_/id/33736273/haas-rejects-uralkali-13-million-refund-demand-want-compensation-report'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,17 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "cc6547e4-46e6-4f28-b687-2e4add6d7695",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'TREMAYNE: Ferrari are the team to beat right now – but F1’s 2022 storyline is still far from written'"
+       "'6 clever race strategies from F1 history that paid big '"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
     "    url = \"https://www.formula1.com/\"\n",
     "    browser.visit(url)\n",
     "    html = browser.html\n",
-    "    soup = bs(html, 'html.parser')\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    result_title = soup.find_all('p', class_='f1--title')\n",
     "    f1_title = result_title[0].text\n",
     "    f1_title\n",
@@ -227,17 +227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "3633ad5b-5b43-40e5-bc64-b74823aac562",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.formula1.com//en/latest/article.treymayne-ferrari-are-the-team-to-beat-right-now-but-f1s-2022-storyline-is.5TvOJfMODCDTs6MIUpOM6V.html'"
+       "'https://www.formula1.com//en/latest/article.6-clever-race-strategies-from-f1-history-that-paid-big.2BxUgWMjbqFrsjGSrGxm8a.html'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "40131e56-bb1e-41f5-b7f7-2d206fcbdd26",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "\"Haas rejects Uralkali's $13m refund demand\""
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,14 +270,14 @@
     "    link_prefix = \"https://www.espn.com/\"\n",
     "    browser.visit(url)\n",
     "    html = browser.html\n",
-    "    soup = bs(html, 'html.parser')\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    espn_title = soup.find('h1', class_='contentItem__title--story').text\n",
     "    espn_title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "f054a0fb-530d-4c18-8945-96184c01164d",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "'https://www.espn.com//f1/story/_/id/33736273/haas-rejects-uralkali-13-million-refund-demand-want-compensation-report'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "f816d36d-5717-4b40-9e04-4f1cebb78ad2",
    "metadata": {},
    "outputs": [],
@@ -316,20 +316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "24467148-51f7-4077-a112-f642b8727e7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'f1_title': 'TREMAYNE: Ferrari are the team to beat right now – but F1’s 2022 storyline is still far from written',\n",
-       " 'f1_link': 'https://www.formula1.com//en/latest/article.treymayne-ferrari-are-the-team-to-beat-right-now-but-f1s-2022-storyline-is.5TvOJfMODCDTs6MIUpOM6V.html',\n",
+       "{'f1_title': '6 clever race strategies from F1 history that paid big ',\n",
+       " 'f1_link': 'https://www.formula1.com//en/latest/article.6-clever-race-strategies-from-f1-history-that-paid-big.2BxUgWMjbqFrsjGSrGxm8a.html',\n",
        " 'espn_title': \"Haas rejects Uralkali's $13m refund demand\",\n",
        " 'espn_link': 'https://www.espn.com//f1/story/_/id/33736273/haas-rejects-uralkali-13-million-refund-demand-want-compensation-report'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "56902a6a-aeae-4e84-8e15-20b0a5382f8d",
    "metadata": {},
    "outputs": [],
