DB Graph attempts

--- a/dftransform.ipynb
+++ b/dftransform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2864,24 +2864,483 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>race_id</th>\n",
+       "      <th>avg_pit_duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>841</td>\n",
+       "      <td>24342.822222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>842</td>\n",
+       "      <td>24434.372881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>843</td>\n",
+       "      <td>22299.241379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>844</td>\n",
+       "      <td>23005.060976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>845</td>\n",
+       "      <td>21567.597403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>1072</td>\n",
+       "      <td>786495.680851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>1073</td>\n",
+       "      <td>21811.655172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>1074</td>\n",
+       "      <td>25377.603448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>1075</td>\n",
+       "      <td>21812.631579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>1076</td>\n",
+       "      <td>18541.681818</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>220 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     race_id  avg_pit_duration\n",
+       "0        841      24342.822222\n",
+       "1        842      24434.372881\n",
+       "2        843      22299.241379\n",
+       "3        844      23005.060976\n",
+       "4        845      21567.597403\n",
+       "..       ...               ...\n",
+       "215     1072     786495.680851\n",
+       "216     1073      21811.655172\n",
+       "217     1074      25377.603448\n",
+       "218     1075      21812.631579\n",
+       "219     1076      18541.681818\n",
+       "\n",
+       "[220 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Run SQL query to find the average fastest lap speed\n",
+    "avg_fastest_lap_df = pd.read_sql(\n",
+    "    \"SELECT * FROM pit_stop_duration\",\n",
+    "    engine\n",
+    ")\n",
+    "avg_fastest_lap_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>race_id</th>\n",
+       "      <th>avg_pit_duration</th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1031</td>\n",
+       "      <td>21043.815789</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1032</td>\n",
+       "      <td>22929.190476</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1033</td>\n",
+       "      <td>23197.377778</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1034</td>\n",
+       "      <td>31254.090909</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1035</td>\n",
+       "      <td>28733.780488</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1036</td>\n",
+       "      <td>22335.228571</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1037</td>\n",
+       "      <td>24100.450000</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1038</td>\n",
+       "      <td>714235.270270</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1039</td>\n",
+       "      <td>529469.500000</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1040</td>\n",
+       "      <td>30807.333333</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1041</td>\n",
+       "      <td>23468.787879</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1042</td>\n",
+       "      <td>28589.960000</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1043</td>\n",
+       "      <td>30907.300000</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1044</td>\n",
+       "      <td>28132.342105</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1045</td>\n",
+       "      <td>403572.596491</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1046</td>\n",
+       "      <td>26211.230769</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1047</td>\n",
+       "      <td>22681.000000</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    race_id  avg_pit_duration  year  round\n",
+       "0      1031      21043.815789  2020      1\n",
+       "1      1032      22929.190476  2020      2\n",
+       "2      1033      23197.377778  2020      3\n",
+       "3      1034      31254.090909  2020      4\n",
+       "4      1035      28733.780488  2020      5\n",
+       "5      1036      22335.228571  2020      6\n",
+       "6      1037      24100.450000  2020      7\n",
+       "7      1038     714235.270270  2020      8\n",
+       "8      1039     529469.500000  2020      9\n",
+       "9      1040      30807.333333  2020     10\n",
+       "10     1041      23468.787879  2020     11\n",
+       "11     1042      28589.960000  2020     12\n",
+       "12     1043      30907.300000  2020     13\n",
+       "13     1044      28132.342105  2020     14\n",
+       "14     1045     403572.596491  2020     15\n",
+       "15     1046      26211.230769  2020     16\n",
+       "16     1047      22681.000000  2020     17"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Run SQL query to find the average fastest lap speed\n",
+    "avg_fastest_lap_df = pd.read_sql(\n",
+    "    \"SELECT p.race_id, p.avg_pit_duration, r.year, r.round \\\n",
+    "        FROM pit_stop_duration AS p \\\n",
+    "            JOIN races AS r ON r.race_id=p.race_id \\\n",
+    "                WHERE year=2020\\\n",
+    "                    ORDER BY (r.year,r.round)\",\n",
+    "    engine\n",
+    ")\n",
+    "avg_fastest_lap_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>race_id</th>\n",
+       "      <th>avg_pit_time</th>\n",
+       "      <th>driver_id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1031</td>\n",
+       "      <td>19172.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1031</td>\n",
+       "      <td>21158.666667</td>\n",
+       "      <td>844</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1031</td>\n",
+       "      <td>21188.500000</td>\n",
+       "      <td>842</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1031</td>\n",
+       "      <td>19107.500000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1031</td>\n",
+       "      <td>21417.000000</td>\n",
+       "      <td>847</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>1047</td>\n",
+       "      <td>21587.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>309</th>\n",
+       "      <td>1047</td>\n",
+       "      <td>21289.000000</td>\n",
+       "      <td>830</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>1047</td>\n",
+       "      <td>21480.000000</td>\n",
+       "      <td>841</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>311</th>\n",
+       "      <td>1047</td>\n",
+       "      <td>25724.000000</td>\n",
+       "      <td>826</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>1047</td>\n",
+       "      <td>26015.666667</td>\n",
+       "      <td>850</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>313 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     race_id  avg_pit_time  driver_id  year  round\n",
+       "0       1031  19172.000000        822  2020      1\n",
+       "1       1031  21158.666667        844  2020      1\n",
+       "2       1031  21188.500000        842  2020      1\n",
+       "3       1031  19107.500000          1  2020      1\n",
+       "4       1031  21417.000000        847  2020      1\n",
+       "..       ...           ...        ...   ...    ...\n",
+       "308     1047  21587.000000        822  2020     17\n",
+       "309     1047  21289.000000        830  2020     17\n",
+       "310     1047  21480.000000        841  2020     17\n",
+       "311     1047  25724.000000        826  2020     17\n",
+       "312     1047  26015.666667        850  2020     17\n",
+       "\n",
+       "[313 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Run SQL query to find the average fastest lap speed\n",
+    "avg_fastest_lap_df = pd.read_sql(\n",
+    "    \"SELECT p.race_id, p.avg_pit_time, p.driver_id, d.first_name, d.last_name, r.year, r.round \\\n",
+    "        FROM pit_stop_avg_per_driver AS p \\\n",
+    "            JOIN races AS r ON r.race_id=p.race_id \\\n",
+    "                JOIN drivers AS d ON p.driver_id=d.driver_id \\\n",
+    "                    WHERE year=2020\\\n",
+    "                        ORDER BY (r.year,r.round)\",\n",
+    "    engine\n",
+    ")\n",
+    "avg_fastest_lap_df"
+   ]
   },
   {
    "cell_type": "code",
@@ -2924,7 +3383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
