--- a/dftransform.ipynb
+++ b/dftransform.ipynb
@@ -3181,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3208,6 +3208,8 @@
        "      <th>race_id</th>\n",
        "      <th>avg_pit_time</th>\n",
        "      <th>driver_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
        "      <th>year</th>\n",
        "      <th>round</th>\n",
        "    </tr>\n",
@@ -3218,112 +3220,197 @@
        "      <td>1031</td>\n",
        "      <td>19172.000000</td>\n",
        "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
        "      <td>2020</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1031</td>\n",
-       "      <td>21158.666667</td>\n",
-       "      <td>844</td>\n",
+       "      <td>1032</td>\n",
+       "      <td>21376.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
        "      <td>2020</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1031</td>\n",
-       "      <td>21188.500000</td>\n",
-       "      <td>842</td>\n",
+       "      <td>1033</td>\n",
+       "      <td>21707.333333</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
        "      <td>2020</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1031</td>\n",
-       "      <td>19107.500000</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1034</td>\n",
+       "      <td>32086.500000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
        "      <td>2020</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1031</td>\n",
-       "      <td>21417.000000</td>\n",
-       "      <td>847</td>\n",
+       "      <td>1035</td>\n",
+       "      <td>28298.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
        "      <td>2020</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>1036</td>\n",
+       "      <td>22353.333333</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>308</th>\n",
+       "      <th>6</th>\n",
+       "      <td>1037</td>\n",
+       "      <td>25548.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1038</td>\n",
+       "      <td>773337.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1039</td>\n",
+       "      <td>560456.400000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1040</td>\n",
+       "      <td>29750.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1041</td>\n",
+       "      <td>22625.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1042</td>\n",
+       "      <td>26512.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1043</td>\n",
+       "      <td>29864.500000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1044</td>\n",
+       "      <td>23125.500000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1045</td>\n",
+       "      <td>308387.500000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1046</td>\n",
+       "      <td>38713.000000</td>\n",
+       "      <td>822</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
        "      <td>1047</td>\n",
        "      <td>21587.000000</td>\n",
        "      <td>822</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>309</th>\n",
-       "      <td>1047</td>\n",
-       "      <td>21289.000000</td>\n",
-       "      <td>830</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>310</th>\n",
-       "      <td>1047</td>\n",
-       "      <td>21480.000000</td>\n",
-       "      <td>841</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>311</th>\n",
-       "      <td>1047</td>\n",
-       "      <td>25724.000000</td>\n",
-       "      <td>826</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>312</th>\n",
-       "      <td>1047</td>\n",
-       "      <td>26015.666667</td>\n",
-       "      <td>850</td>\n",
+       "      <td>Valtteri</td>\n",
+       "      <td>Bottas</td>\n",
        "      <td>2020</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>313 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     race_id  avg_pit_time  driver_id  year  round\n",
-       "0       1031  19172.000000        822  2020      1\n",
-       "1       1031  21158.666667        844  2020      1\n",
-       "2       1031  21188.500000        842  2020      1\n",
-       "3       1031  19107.500000          1  2020      1\n",
-       "4       1031  21417.000000        847  2020      1\n",
-       "..       ...           ...        ...   ...    ...\n",
-       "308     1047  21587.000000        822  2020     17\n",
-       "309     1047  21289.000000        830  2020     17\n",
-       "310     1047  21480.000000        841  2020     17\n",
-       "311     1047  25724.000000        826  2020     17\n",
-       "312     1047  26015.666667        850  2020     17\n",
-       "\n",
-       "[313 rows x 5 columns]"
+       "    race_id   avg_pit_time  driver_id first_name last_name  year  round\n",
+       "0      1031   19172.000000        822   Valtteri    Bottas  2020      1\n",
+       "1      1032   21376.000000        822   Valtteri    Bottas  2020      2\n",
+       "2      1033   21707.333333        822   Valtteri    Bottas  2020      3\n",
+       "3      1034   32086.500000        822   Valtteri    Bottas  2020      4\n",
+       "4      1035   28298.000000        822   Valtteri    Bottas  2020      5\n",
+       "5      1036   22353.333333        822   Valtteri    Bottas  2020      6\n",
+       "6      1037   25548.000000        822   Valtteri    Bottas  2020      7\n",
+       "7      1038  773337.000000        822   Valtteri    Bottas  2020      8\n",
+       "8      1039  560456.400000        822   Valtteri    Bottas  2020      9\n",
+       "9      1040   29750.000000        822   Valtteri    Bottas  2020     10\n",
+       "10     1041   22625.000000        822   Valtteri    Bottas  2020     11\n",
+       "11     1042   26512.000000        822   Valtteri    Bottas  2020     12\n",
+       "12     1043   29864.500000        822   Valtteri    Bottas  2020     13\n",
+       "13     1044   23125.500000        822   Valtteri    Bottas  2020     14\n",
+       "14     1045  308387.500000        822   Valtteri    Bottas  2020     15\n",
+       "15     1046   38713.000000        822   Valtteri    Bottas  2020     16\n",
+       "16     1047   21587.000000        822   Valtteri    Bottas  2020     17"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3335,7 +3422,7 @@
     "        FROM pit_stop_avg_per_driver AS p \\\n",
     "            JOIN races AS r ON r.race_id=p.race_id \\\n",
     "                JOIN drivers AS d ON p.driver_id=d.driver_id \\\n",
-    "                    WHERE year=2020\\\n",
+    "                    WHERE (year=2020 AND last_name='Bottas' AND first_name='Valtteri') \\\n",
     "                        ORDER BY (r.year,r.round)\",\n",
     "    engine\n",
     ")\n",
