4th scrape, circuit list fixed

--- a/easyScrape.ipynb
+++ b/easyScrape.ipynb
@@ -55,6 +55,41 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "73c9a029",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www.motorsport.com/f1/news/\"\n",
+    "browser.visit(url)\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8fc30ea6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Alfa Romeo F1 team to introduce revised floor at Imola'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "motorsport_title = soup.find_all('a', class_='ms-item_link')[0][\"title\"]\n",
+    "motorsport_title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "66475bdc-3794-4e3e-96da-e9672affb167",
    "metadata": {},
    "outputs": [],
